[package]
name = "wasm4-impl"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
description = "Procedural macro implementations for WASM-4 bindings"
authors = ["Daria Sukhonina <dariasukhonina@gmail.com>"]
license = "ISC"
documentation = "https://docs.rs/wasm4-impl"
homepage = "https://github.com/ZetaNumbers/wasm4-rs/tree/main/wasm4-impl"
repository = "https://github.com/ZetaNumbers/wasm4-rs"
keywords = ["wasm-4", "wasm4"]

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.52"
bitvec = "1.0.0"
heapless = "0.7.9"
image = "0.23.14"
once_cell = "1.9.0"
proc-macro2 = "1.0.36"
quote = "1.0.14"
syn = { version = "1.0.85", features = ["extra-traits"] }

[dependencies.wasm4-common]
path = "../wasm4-common"
version = "0.1.0"
